[project]
name = "qiskit-mcp-server"
version = "0.1.0"
description = "Shared utilities for Qiskit MCP servers including circuit serialization (QPY/QASM3)"
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
    "qiskit>=1.0.0",
    "qiskit-qasm3-import>=0.5.0",
    "nest-asyncio>=1.5.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
    "mypy>=1.15.0"
]

test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=4.1.0",
]

all = [
    "qiskit-mcp-server[dev,test]",
]

[[project.authors]]
name = "Qiskit Community"
email = "qiskit@us.ibm.com"

[project.license]
text = "Apache-2.0"

keywords = ["quantum", "qiskit", "mcp", "qpy", "qasm", "circuit-serialization"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Qiskit/mcp-servers"
Repository = "https://github.com/Qiskit/mcp-servers"
Documentation = "https://github.com/Qiskit/mcp-servers/tree/main/qiskit-mcp-server#readme"
"Bug Tracker" = "https://github.com/Qiskit/mcp-servers/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qiskit_mcp_server"]
include = ["src/qiskit_mcp_server/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
